@@ -1,3 +1,8 @@
+2014-05-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/groups/group_list.php: Dont show void agents
+	in report template wizard.
+
 2014-05-22  Vanessa Gil <vanessa.gil@artica.es>
 
 	* godmode/setup/setup_visuals.php
